[gd_scene load_steps=6 format=3 uid="uid://ugo7esglev50"]

[ext_resource type="Script" path="res://Scripts/UI/choose_color.gd" id="1_64yu5"]
[ext_resource type="Texture2D" uid="uid://dltv6va6j5877" path="res://Sprites/YELLOW.png" id="2_jmnfb"]
[ext_resource type="Texture2D" uid="uid://dp6uhvybmriji" path="res://Sprites/BLUE.png" id="3_1y4th"]
[ext_resource type="Texture2D" uid="uid://bxdsx5sckdbk4" path="res://Sprites/RED.png" id="4_f2kja"]
[ext_resource type="Texture2D" uid="uid://bwljrnfs4whn5" path="res://Sprites/GREEN.png" id="5_qu1le"]

[node name="ChooseColor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_64yu5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
columns = 2

[node name="YellowButton" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_jmnfb")

[node name="BlueButton" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_1y4th")

[node name="RedButton" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("4_f2kja")

[node name="GreenButton" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("5_qu1le")

[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/YellowButton" to="." method="_on_yellow_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/BlueButton" to="." method="_on_blue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/RedButton" to="." method="_on_red_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/GreenButton" to="." method="_on_green_button_pressed"]
